// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpeneseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Gastos
    </div>
    <div
      className="show-for-desktop"
    >
      Gasto
    </div>
    <div
      className="show-for-desktop"
    >
      Importe
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      createdAt={345600000}
      description="Credit card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render Expense list with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Gastos
    </div>
    <div
      className="show-for-desktop"
    >
      Gasto
    </div>
    <div
      className="show-for-desktop"
    >
      Importe
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <p>
        No expenses
      </p>
    </div>
  </div>
</div>
`;
